Thu Mar  7 16:46:58 2002  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtktreeview.c (validate_visible_area): get rid of really
	bad focus loop.
	(gtk_tree_view_clamp_node_visible): only clamp the node when
	realized.  Need to replace this with scroll_to_cell sometime.
	(gtk_tree_view_header_focus): clickable or reorderable columns are
	focusable, #73656

	* gtk/gtktreeviewcolumn.c (gtk_tree_view_column_get_widget): fix
	docs to reflect behaviour change, #73682

Fri Mar  8 11:12:32 2002  Owen Taylor  <otaylor@redhat.com>

	* NEWS: Fix version numbers. (Johan Dahlin.)

	* INSTALL.in: Update, just refer to gtk-building.html
	rather than duplicating information.

	* README.in: Add release specific notes.

	* Makefile.am (EXTRA_DIST): Remove TODO and TODO.xml
	from the distribution.

Thu Mar  7 23:29:35 2002  Owen Taylor  <otaylor@redhat.com>

	* NEWS: Final updates for 2.0.0

	* README.in: Updates.

2002-03-08  Tor Lillqvist  <tml@iki.fi>

	* gdk/Makefile.am (LDFLAGS): Add missing .la suffix for	libgdk_pixbuf.

Thu Mar  7 21:32:01 2002  Kristian Rietveld  <kris@gtk.org>

	* gtk/gtktreestore.c (gtk_tree_store_sort_iter_changed): increase
	value of new_location by one if cmp_a > 0 and we hit the end of
	the list.

Thu Mar  7 10:31:57 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtknotebook.c (gtk_notebook_timer): Fix problem where
	there were two copies of the "do an arrow step" code, 
	one correct for rotated notebooks, one not. (#73855,
	Thomas Leonard.)

Wed Mar  6 23:20:51 2002  Jonathan Blandford  <jrb@redhat.com>
and			  Kristian Rietveld  <kris@gtk.org>

	Finishing touch for 2.0.0 release, fixes #70782, #72729, the
	'stealth' bug and other last-minute minor issues.

	* gtk/gtktreeview.c (gtk_tree_view_bin_expose): set dnd dest line
	drawing right. We can't draw the line at the position of the next
	row, because that one still has to be drawn. So draw everthing at
	a -1 offset.
	(validate_visible_area): add check for invalid descendants and